--- a/index.html
+++ b/index.html
@@ -90,8 +90,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             <section class="model-section">
                 <h2 class="section-title">Introduction Video</h2>
-                 <iframe width="560" height="315" src="https://www.youtube.com/embed/1?autoplay=0&amp;controls=1&amp;disablekb=0&amp;fs=1&amp;iv_load_policy=1&amp;loop=0&amp;modestbranding=0&amp;playsinline=1&amp;rel=0&amp;showinfo=1&amp;theme=dark&amp;color=white" title="Exploring the Dynamic Fractal Cosmological Model (DFCM)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </section>
+                 <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/1?autoplay=0&controls=1&disablekb=0&fs=1&iv_load_policy=1&loop=0&modestbranding=0&playsinline=1&rel=0&showinfo=1&theme=dark&color=white" title="Exploring the Dynamic Fractal Cosmological Model (DFCM)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+</section>
 
             
 
