--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <section class="model-section">
                 <h2 class="section-title">Introduction Video</h2>
                  <div class="video-container">
-    <iframe src="https://www.youtube.com/embed/1?autoplay=0&controls=1&disablekb=0&fs=1&iv_load_policy=1&loop=0&modestbranding=0&playsinline=1&rel=0&showinfo=1&theme=dark&color=white" title="Exploring the Dynamic Fractal Cosmological Model (DFCM)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/-rZOLSosNvA?si=FeyB7Uqg9ix36O2J" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 </section>
 
             
