--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
            </section>
 
             <section class="model-section">
-                <h2 class="section-title">Introduction Video</h2>
+                <h2 class="section-title">Model Overview</h2>
                  <div class="video-container">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/-rZOLSosNvA?si=FeyB7Uqg9ix36O2J" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 </section>
