--- a/index.html
+++ b/index.html
@@ -81,11 +81,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <section class="hero">
                 <h1>The Dynamic Fractal Cosmological Model</h1>
                 <p>Discover a new paradigm that resolves the greatest tensions in modern cosmology. By introducing an evolving spacetime dimension, DFCM accurately predicts the Universe's expansion, the formation of cosmic structures, and achieves a <strong>7.1σ statistical improvement</strong> over the standard $\Lambda$CDM model.</p>
-                <a href="https://phi1618.space/zenodo" target="_blank" class="btn btn-download">
-                    <i class="fas fa-rocket"></i>
-                    <span>Explore the Full Paper</span>
-                    <span class="btn-glow"></span>
-                </a>
+                <div class="futuristic-button-container">
+  <a href="https://phi1618.space/zenodo" class="futuristic-button">
+    <div class="button-content">
+      <div class="icon-text-wrapper">
+        <i class="fas fa-file-pdf"></i>
+        <span>Full Paper</span>
+      </div>
+      <p class="description">PDF on Zenodo</p>
+    </div>
+  </a>
+
+  <a href="#" onclick="showPage('ai_assistant')" class="futuristic-button">
+    <div class="button-content">
+      <div class="icon-text-wrapper">
+        <i class="fas fa-robot"></i>
+        <span>AI Assistant</span>
+      </div>
+      <p class="description">Ask about DFCM</p>
+    </div>
+  </a>
+</div>
+
            </section>
 
             <section class="model-section">
