--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <i class="fas fa-file-pdf"></i>
         <span>Full Paper</span>
       </div>
-      <p class="description">PDF on Zenodo</p>
+      <p class="description">Download on Zenodo</p>
     </div>
   </a>
 
@@ -98,7 +98,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <i class="fas fa-robot"></i>
         <span>AI Assistant</span>
       </div>
-      <p class="description">Ask about DFCM</p>
+      <p class="description">Ask everythings about DFCM</p>
     </div>
   </a>
 </div>
