--- a/index.html
+++ b/index.html
@@ -459,11 +459,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <a href="https://phi1618.space/youtube" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
                 </div>
 
-                <a href="https://phi1618.space/zenodo"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.16639073.svg" alt="DOI"></a>
-
-                <p>The Dynamic Fractal Cosmological Model (DFCM) &copy; 2025 - All rights reserved</p>
                 
-                <span class="author-name">Sylvain Herbin | ORCID: 0009-0001-3390-5012</span>
+               <span class="author-name">Sylvain Herbin | ORCID: 0009-0001-3390-5012<a href="https://phi1618.space/zenodo"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.16639073.svg" alt="DOI"></a>
+</span>
+                 <p>The Dynamic Fractal Cosmological Model (DFCM) &copy; 2025 - All rights reserved</p>
+                
             </div>
         </footer>
     </div>
