--- a/index.html
+++ b/index.html
@@ -460,8 +460,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
 
                 
-               <span class="author-name">Sylvain Herbin | ORCID: 0009-0001-3390-5012<a href="https://phi1618.space/zenodo"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.16639073.svg" alt="DOI"></a>
+               <span class="author-name">Sylvain Herbin | ORCID: 0009-0001-3390-5012</a>
 </span>
+                <a href="https://phi1618.space/zenodo"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.16639073.svg" alt="DOI">
                  <p>The Dynamic Fractal Cosmological Model (DFCM) &copy; 2025 - All rights reserved</p>
                 
             </div>
