--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 
                <span class="author-name">Sylvain Herbin | ORCID: 0009-0001-3390-5012
 </span>
-                <a href="https://phi1618.space/zenodo"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.16639073.svg" alt="DOI"></a>
+                <a href="https://phi1618.space/zenodo"><img src="images/Zenodo.svg" alt="DOI"></a>
                  <p>The Dynamic Fractal Cosmological Model (DFCM) &copy; 2025 - All rights reserved</p>
                 
             </div>
