--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <thead>
                             <tr>
                                 <th>Cosmological Probe</th>
-                                <th>$\chi^2/\text{dof}$</th>
+                                <strong><th style="letter-spacing: 1px;">$\chi^2/\text{dof}$</th></strong>
+
                                 <th>Description</th>
                             </tr>
                         </thead>
