--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <thead>
                             <tr>
                                 <th>Cosmological Probe</th>
-                                <strong><th style="letter-spacing: 1px;">$\chi^2/\text{dof}$</th></strong>
+                               <th style="letter-spacing: 1px;"><strong>$\chi^2/\text{dof}$</strong></th>
 
                                 <th>Description</th>
                             </tr>
