--- a/index.html
+++ b/index.html
@@ -461,9 +461,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
 
                 
-               <span class="author-name">Sylvain Herbin | ORCID: 0009-0001-3390-5012
+               <span class="author-name">Sylvain Herbin | <em>Independant Researcher</em>
 </span>
-                <a href="https://phi1618.space/zenodo"><img src="images/Zenodo.svg" alt="DOI"></a>
+               <p><a href="https://phi1618.space/zenodo"><img src="images/Zenodo.svg" alt="DOI"></a>
+                <a href="https://phi1618.space/orcid"><img src="images/ORCID.svg" alt="ORCID"></a></p>
                  <p>The Dynamic Fractal Cosmological Model (DFCM) &copy; 2025 - All rights reserved</p>
                 
             </div>
