--- a/index.html
+++ b/index.html
@@ -463,8 +463,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 
                <span class="author-name">Sylvain Herbin | <em>Independant Researcher</em>
 </span>
-               <p><a href="https://phi1618.space/zenodo"><img src="images/Zenodo.svg" alt="DOI"></a>
-                <a href="https://phi1618.space/orcid"><img src="images/ORCID.svg" alt="ORCID"></a></p>
+               <span><a href="https://phi1618.space/zenodo"><img src="images/Zenodo.svg" alt="DOI"></a>
+                <a href="https://phi1618.space/orcid"><img src="images/ORCID.svg" alt="ORCID"></a></span>
                  <p>The Dynamic Fractal Cosmological Model (DFCM) &copy; 2025 - All rights reserved</p>
                 
             </div>
