--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <th style="letter-spacing: 1px;"><strong>$\chi^2/\text{d o f}$</strong></th>
                     <th class="description-header">
                         <button id="toggle-all-descriptions" class="toggle-button">
-                            <i class="fas fa-eye" aria-hidden="true"></i> Show Descriptions
+                            <i class="fas fa-eye" aria-hidden="true"></i> 
                         </button>
                     </th>
                 </tr>
