--- a/index.html
+++ b/index.html
@@ -1010,7 +1010,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         } else {
             toggleIcon.classList.remove('fa-eye-slash');
             toggleIcon.classList.add('fa-eye');
-            toggleButton.innerHTML = `<i class="fas fa-eye"></i> Show Descriptions`;
+            toggleButton.innerHTML = `<i class="fas fa-eye"></i> `;
         }
     });
 });
