--- a/calculateur.html
+++ b/calculateur.html
@@ -88,7 +88,7 @@
         const loader = document.getElementById('loader');
 
         // L'adresse de notre API. C'EST L'ADRESSE IP PUBLIQUE !
-        const apiUrl = 'http://16.171.31.139:5000/run-script/test';
+        const apiUrl = 'https://16.171.31.139:5000/run-script/test';
 
         // On ajoute un écouteur d'événement sur le clic du bouton
         runButton.addEventListener('click', async () => {
