--- a/calculateur.html
+++ b/calculateur.html
@@ -10,43 +10,35 @@
     </style>
 </head>
 <body>
-
     <h1>Cosmological Calculator</h1>
     <p>Select a model to test:</p>
-
     <div id="buttons-container">
         <button onclick="runScript('test')">Run Test Script</button>
         <button onclick="runScript('bao')">Test with BAO</button>
     </div>
-    
     <h2>Result Console:</h2>
     <pre id="output">Results will appear here...</pre>
-
     <script>
         const outputDiv = document.getElementById('output');
-
         function runScript(scriptName) {
             outputDiv.textContent = `Running script "${scriptName}"...`;
-            
             const apiUrl = `https://phi1618.space/api/run-script/${scriptName}`;
-
             fetch(apiUrl)
                 .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Network error, status: ' + response.status);
-                    }
+                    if (!response.ok) { throw new Error('Network error, status: ' + response.status); }
                     return response.json();
                 })
                 .then(data => {
-                    // ---- MODIFICATION DE DÉBOGAGE ----
-                    // Affiche la réponse JSON brute et complète
-                    outputDiv.textContent = JSON.stringify(data, null, 2);
+                    if (data.status === 'success') {
+                        outputDiv.textContent = data.output;
+                    } else {
+                        outputDiv.textContent = `--- SCRIPT ERROR ---\n${data.message}\n\n${data.output}`;
+                    }
                 })
                 .catch(error => {
                     outputDiv.textContent = 'An error occurred: \n' + error.toString();
                 });
         }
     </script>
-
 </body>
 </html>
