--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <li><a href="#" onclick="showPage('predictions')">Predictions</a></li>
                     <li><a href="#" onclick="showPage('glossary')">Glossary</a></li>
                     <li><a href="#" onclick="showPage('ai_assistant')">AI Assistant</a></li>
-                </ul>
+                    <li><a href="reproducibility.html">Reproducibility</a></li>
+                 </ul>
             </nav>
         </header>
 
