--- a/reproducibility.html
+++ b/reproducibility.html
@@ -54,7 +54,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <li><a href="#" onclick="showPage('predictions')">Predictions</a></li>
                     <li><a href="#" onclick="showPage('glossary')">Glossary</a></li>
                     <li><a href="#" onclick="showPage('ai_assistant')">AI Assistant</a></li>
-                    <li><a href="#" class="active" onclick="showPage('reproducibility')">Reproducibility</a></li>
+                    <li><a href="reproducibility.html">Reproducibility</a></li>
+
                 </ul>
             </nav>
         </header>
