--- a/reproducibility.html
+++ b/reproducibility.html
@@ -48,16 +48,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <i class="fas fa-bars"></i>
             </div>
             <nav id="nav-menu">
-                <ul>
-                    <li><a href="#" onclick="showPage('home')">Home</a></li>
-                    <li><a href="#" onclick="showPage('tensions')">Tensions Solved</a></li>
-                    <li><a href="#" onclick="showPage('predictions')">Predictions</a></li>
-                    <li><a href="#" onclick="showPage('glossary')">Glossary</a></li>
-                    <li><a href="#" onclick="showPage('ai_assistant')">AI Assistant</a></li>
-                    <li><a href="reproducibility.html">Reproducibility</a></li>
+    <ul>
+        <li><a href="index.html" onclick="showPage('home')">Home</a></li>
+        <li><a href="index.html" onclick="showPage('tensions')">Tensions Solved</a></li>
+        <li><a href="index.html" onclick="showPage('predictions')">Predictions</a></li>
+        <li><a href="index.html" onclick="showPage('glossary')">Glossary</a></li>
+        <li><a href="index.html" onclick="showPage('ai_assistant')">AI Assistant</a></li>
+        <li><a href="#" class="active">Reproducibility</a></li>
+    </ul>
+</nav>
 
-                </ul>
-            </nav>
         </header>
 
         <div id="reproducibility" class="page active">
