--- a/reproducibility.html
+++ b/reproducibility.html
@@ -75,6 +75,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <button class="futuristic-button-small" onclick="runScript('validate_bao_hz.py')"><i class="fas fa-play"></i> Run Script</button>
                             <a href="scripts/validate_bao_hz.py" class="futuristic-button-small" download><i class="fas fa-download"></i> Download</a>
                         </div>
+</div>
+                    <div class="script-card">
+                        <h3>BAO (DESI EDR)</h3>
+                        <p>Verify the accurate fit to Baryon Acoustic Oscillations, aligning with DESI data and resolving sound horizon discrepancies.</p>
+                        <div class="script-buttons">
+                            <button class="futuristic-button-small" onclick="runScript('bao.py')"><i class="fas fa-play"></i> Run Script</button>
+                            <a href="scripts/bao.py" class="futuristic-button-small" download><i class="fas fa-download"></i> Download</a>
+                        </div>
+                    </div>
+                        
                     </div>
                     <div class="script-card">
                         <h3>Supernovae & Expansion History</h3>
