--- a/reproducibility.html
+++ b/reproducibility.html
@@ -77,6 +77,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                    </div>
                     <div class="script-card">
+    <h3>Cosmic Chronometers & Expansion History</h3>
+    <p>Use this script to test the DFCM against Cosmic Chronometer data, an independent method for measuring the Universe's expansion rate, to verify its agreement with the expansion history.</p>
+    <div class="script-buttons">
+        <button class="futuristic-button-small" onclick="runScript('Cosmic_Chronometers.py')"><i class="fas fa-play"></i> Run Script</button>
+        <a href="scripts/Cosmic_Chronometers.py" class="futuristic-button-small" download><i class="fas fa-download"></i> Download</a>
+    </div>
+</div>
+
+                    <div class="script-card">
                         <h3>BAO (DESI EDR)</h3>
                         <p>Verify the accurate fit to Baryon Acoustic Oscillations, aligning with DESI data and resolving sound horizon discrepancies.</p>
                         <div class="script-buttons">
