--- a/reproducibility.html
+++ b/reproducibility.html
@@ -104,13 +104,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </div>
                     <div class="script-card">
-                        <h3>Cosmic Microwave Background (CMB)</h3>
-                        <p>Test the model against Planck CMB data, examining its predictions for the early Universe.</p>
-                        <div class="script-buttons">
-                            <button class="futuristic-button-small" onclick="runScript('CMB.py')"><i class="fas fa-play"></i> Run Script</button>
-                            <a href="scripts/CMB.py" class="futuristic-button-small" download><i class="fas fa-download"></i> Download</a>
-                        </div>
-                    </div>
+    <h3>Cosmic Microwave Background (CMB)</h3>
+    <p>Test the model against Planck CMB data, examining its predictions for the early Universe.</p>
+    <div class="script-buttons">
+        <button class="futuristic-button-small" onclick="loadCMBData()">
+            <i class="fas fa-upload"></i> Charger les données (CMB)
+        </button>
+        <button class="futuristic-button-small" onclick="runScript('CMB.py')"><i class="fas fa-play"></i> Run Script</button>
+        <a href="scripts/CMB.py" class="futuristic-button-small" download><i class="fas fa-download"></i> Download</a>
+    </div>
+</div>
+
                     <div class="script-card">
                         <h3>Large-Scale Structure (LSS)</h3>
                         <p>Investigate the model's predictions for galaxy clustering and the suppression of massive clusters.</p>
