--- a/reproducibility.html
+++ b/reproducibility.html
@@ -79,7 +79,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="script-card">
     <h3>Cosmic Microwave Background (CMB)</h3>
     <p>Test the model against Planck CMB data, examining its predictions for the early Universe.</p>
-    <div class="script-buttons">
+    <p>* step 1 : clic on Load Data, step 2 : clic on Run Script</p>
+                        <div class="script-buttons">
         <button class="futuristic-button-small" onclick="loadCMBData('COM_PowerSpect_CMB-TT-full_R3.01.txt')">
             <i class="fas fa-upload"></i> Load Data (CMB)
         </button>
