--- a/reproducibility.html
+++ b/reproducibility.html
@@ -144,7 +144,57 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 </div>
 
-                   
+                   <div class="script-card">
+                    <h3>Gravitational Lensing (H0LiCOW)</h3>
+                    <p>Validate the model's Hubble constant prediction against complete gravitational lensing data.</p>
+                    <div class="script-buttons">
+                        <button class="futuristic-button-small" onclick="runScript('dfcm_h0licow_full_validation.py')">
+                            <i class="fas fa-play"></i> Run Script
+                        </button>
+                        <a href="scripts/dfcm_h0licow_full_validation.py" class="futuristic-button-small" download>
+                            <i class="fas fa-download"></i> Download
+                        </a>
+                    </div>
+                </div>
+
+                <div class="script-card">
+                    <h3>Gamma Ray Bursts (Fermi-LAT)</h3>
+                    <p>Test luminosity distance predictions at high redshifts using complete GRB catalog.</p>
+                    <div class="script-buttons">
+                        <button class="futuristic-button-small" onclick="runScript('dfcm_fermigrb_full_analysis.py')">
+                            <i class="fas fa-play"></i> Run Script
+                        </button>
+                        <a href="scripts/dfcm_fermigrb_full_analysis.py" class="futuristic-button-small" download>
+                            <i class="fas fa-download"></i> Download
+                        </a>
+                    </div>
+                </div>
+
+                <div class="script-card">
+                    <h3>Primordial Deuterium (LUNA)</h3>
+                    <p>Verify the model's prediction for baryon density against precision measurements.</p>
+                    <div class="script-buttons">
+                        <button class="futuristic-button-small" onclick="runScript('dfcm_primordial_deuterium_validation.py')">
+                            <i class="fas fa-play"></i> Run Script
+                        </button>
+                        <a href="scripts/dfcm_primordial_deuterium_validation.py" class="futuristic-button-small" download>
+                            <i class="fas fa-download"></i> Download
+                        </a>
+                    </div>
+                </div>
+
+                <div class="script-card">
+                    <h3>Galaxy Clustering (DESI Y1)</h3>
+                    <p>Test structure growth predictions against complete DESI Year 1 data.</p>
+                    <div class="script-buttons">
+                        <button class="futuristic-button-small" onclick="runScript('dfcm_desi_clustering_full.py')">
+                            <i class="fas fa-play"></i> Run Script
+                        </button>
+                        <a href="scripts/dfcm_desi_clustering_full.py" class="futuristic-button-small" download>
+                            <i class="fas fa-download"></i> Download
+                        </a>
+                    </div>
+                </div>
 
                     <div class="script-card">
                         <h3>Large-Scale Structure (LSS)</h3>
