--- a/reproducibility.html
+++ b/reproducibility.html
@@ -139,7 +139,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <i class="fas fa-play"></i> Run Script
         </button>
         <a href="scripts/SNIa.py" class="futuristic-button-small" download>
-            <i class="fas fa-download"></i> Download Script
+            <i class="fas fa-download"></i> Download
         </a>
     </div>
 </div>
